img for main-abt add margin bottom

--- a/css/style.css
+++ b/css/style.css
@@ -746,8 +746,13 @@ ul.ceo-list li {
  width: 100%;
 }
 
+
+
 @media (max-width: 991px) { 
-    .img-list img{margin-bottom: 20px;}    
+    .img-list img{margin-bottom: 20px;}   
+    #main-about .abt-photo {
+        margin-bottom: 20px;
+}
 }
 
 @media (max-width: 767px) { 
